<resources>
    <string name="app_name">Donation 1.5</string>
    <string name="user_name">Name</string>
    <string name="login_btn">Login</string>
    <string name="welcome">Welcome</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="donateNav">Donate</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="defaultUpvotes">00</string>
    <string name="newAmount">$%1$d</string>
    <string name="menuReset">Reset</string>
    <string name="upvotes">Upvotes</string>
    <string name="method">Method</string>
    <string name="newUpvotes">$%1$d</string>
</resources>